--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
     "gray-matter": "^4.0.3",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jotai": "^2.11.1",
     "lucide-react": "^0.468.0",
     "marked": "^17.0.1",
@@ -83,6 +85,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hotkeys-hook": "^4.6.1",
+    "react-i18next": "^16.5.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
