--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "electron-vite preview",
     "package": "electron-builder --dir",
     "package:mac": "electron-builder --mac",
+    "package:mac:arm64": "electron-builder --mac --arm64",
     "package:win": "electron-builder --win",
     "package:linux": "electron-builder --linux",
     "dist": "electron-builder",
@@ -22,7 +23,7 @@
     "claude:download": "node scripts/download-claude-binary.mjs",
     "claude:download:all": "node scripts/download-claude-binary.mjs --all",
     "release": "rm -rf release && bun run claude:download && bun run build && bun run package:mac && bun run dist:manifest && ./scripts/upload-release-wrangler.sh",
-    "release:dev": "rm -rf release && bun run claude:download && bun run build && bun run package:mac && rm -rf node_modules && bun i",
+    "release:dev": "rm -rf release && bun run claude:download && bun run build && bun run package:mac:arm64",
     "sync:public": "./scripts/sync-to-public.sh",
     "icon:generate": "node scripts/generate-icon.mjs",
     "db:generate": "drizzle-kit generate",
