--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "claude:download:all": "node scripts/download-claude-binary.mjs --version=2.1.22 --all",
     "release": "rm -rf release && bun i && bun run claude:download && bun run build && bun run package:mac && bun run dist:manifest && ./scripts/upload-release-wrangler.sh",
     "release:dev": "rm -rf release && bun run claude:download && bun run build && bun run package:mac:arm64",
+    "deploy": "./scripts/deploy-local.sh",
     "sync:public": "./scripts/sync-to-public.sh",
     "icon:generate": "node scripts/generate-icon.mjs",
     "db:generate": "drizzle-kit generate",
