--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dist:upload": "node scripts/upload-release.mjs",
     "claude:download": "node scripts/download-claude-binary.mjs --version=2.1.25",
     "claude:download:all": "node scripts/download-claude-binary.mjs --version=2.1.25 --all",
-    "release": "rm -rf release && bun i && bun run claude:download && bun run build && bun run package:mac && bun run dist:manifest && ./scripts/upload-release-wrangler.sh",
+    "release": "rm -rf release && bun i && bun run claude:download && bun run build && bun run package:mac:arm64 && bun run dist:manifest && ./scripts/upload-release-wrangler.sh",
     "release:dev": "rm -rf release && bun run claude:download && bun run build && bun run package:mac:arm64",
     "deploy": "./scripts/deploy-local.sh",
     "sync:public": "./scripts/sync-to-public.sh",
@@ -186,15 +186,13 @@
         {
           "target": "dmg",
           "arch": [
-            "arm64",
-            "x64"
+            "arm64"
           ]
         },
         {
           "target": "zip",
           "arch": [
-            "arm64",
-            "x64"
+            "arm64"
           ]
         }
       ],
