Force bun build before mac package

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "electron-vite build",
     "preview": "electron-vite preview",
     "package": "electron-builder --dir",
-    "package:mac": "rm -rf release && electron-builder --mac && open release",
-    "package:mac:arm64": "rm -rf release && electron-builder --mac --arm64 && open release",
+    "package:mac": "rm -rf out release && bun run build && electron-builder --mac && open release",
+    "package:mac:arm64": "rm -rf out release && bun run build && electron-builder --mac --arm64 && open release",
     "package:win": "electron-builder --win",
     "package:linux": "electron-builder --linux",
     "dist": "electron-builder",
