Update Inspector Mode to use Agentation for element annotation
This commit replaces the React Grab-based Inspector Mode with
Agentation, a more versatile tool for annotating elements in previews.
Key changes include:
- Add Agentation dependency and build script for bundling
- Create IIFE bundle for injection into webviews
- Update UI to handle Agentation markdown format
- Revise documentation and setup instructions
- Remove obsolete React Grab integration and inspector client script

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "main": "out/main/index.js",
   "scripts": {
-    "dev": "electron-vite dev",
-    "build": "electron-vite build",
+    "build:inspector": "esbuild src/inspector/agentation-entry.tsx --bundle --format=iife --global-name=__1CodeAgentation --minify --target=chrome120 --outfile=src/renderer/assets/agentation-bundle.min.js",
+    "dev": "bun run build:inspector && electron-vite dev",
+    "build": "bun run build:inspector && electron-vite build",
     "preview": "electron-vite preview",
     "package": "electron-builder --dir",
     "package:mac": "rm -rf out release && bun run build && electron-builder --mac && open release",
@@ -132,11 +133,13 @@
     "@typescript/native-preview": "^7.0.0-dev.20260211.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@welldone-software/why-did-you-render": "^10.0.1",
+    "agentation": "^2.2.1",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
     "electron": "~39.4.0",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.0.0",
+    "esbuild": "^0.27.3",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.4.5",
