--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,8 @@ npm-debug.log*
 # electron-vite temp files
 electron.vite.config.*.mjs
 
+# Generated inspector bundle (built by build:inspector)
+src/renderer/assets/agentation-bundle.min.js
+
 # Claude binary (downloaded at build time)
 resources/bin/
