fix(sync): add container-queries dependency and update sync reports

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@electron/rebuild": "^4.0.3",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/diff": "^8.0.0",
     "@types/node": "^20.17.50",
