--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "dist:upload": "node scripts/upload-release.mjs",
     "claude:download": "node scripts/download-claude-binary.mjs --version=2.1.25",
     "claude:download:all": "node scripts/download-claude-binary.mjs --version=2.1.25 --all",
-    "release": "rm -rf release && bun i && bun run claude:download && bun run build && bun run package:mac:arm64 && bun run dist:manifest && ./scripts/upload-release-wrangler.sh",
-    "release:dev": "rm -rf release && bun run claude:download && bun run build && bun run package:mac:arm64",
+    "codex:download": "node scripts/download-codex-binary.mjs",
+    "codex:download:all": "node scripts/download-codex-binary.mjs --all",
+    "release": "rm -rf release && bun i && bun run claude:download && bun run codex:download && bun run build && bun run package:mac:arm64 && bun run dist:manifest && ./scripts/upload-release-wrangler.sh",
+    "release:dev": "rm -rf release && bun run claude:download && bun run codex:download && bun run build && bun run package:mac:arm64",
     "deploy": "./scripts/deploy-local.sh",
     "sync:public": "./scripts/sync-to-public.sh",
     "icon:generate": "node scripts/generate-icon.mjs",
